Fix minor display issues on Safari

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -96,6 +96,7 @@ body
 #what
   position relative
   overflow visible !important
+  font-weight bold
   #hoy
     position absolute
     width 100%
@@ -117,6 +118,9 @@ body
         color #ccc
         a
           color @color
+          text-decoration none
+          border-bottom 1px solid #ccc
+
       transform rotate(-6deg)
       -webkit-transform @transform
       transform-origin 50% 50%
